--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-
 version: "3.8"
 
 services:
   app:
     build: ./
-    command: ./wait-for-postgres.sh db. ./app
+    command: ./wait-for-postgres.sh db ./app
     ports:
       - 8000:8000
     depends_on:
